--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1, h2 {
 
 h1 {
   margin: 2rem;
-  font-size: 55px;
+  font-size: 70px;
   font-weight:300;
 }
 
@@ -23,7 +23,7 @@ h2 {
   font-weight:500
 }
 
-@media (min-width: 901px) {
+@media (min-width: 1906px) {
 
   body:before {
     content: "";
@@ -51,6 +51,7 @@ h2 {
   }
   
   .header-profile > img {
+    min-width: 500px;
     width: 100%;
     height: auto;
     /* float: left; */
@@ -71,7 +72,8 @@ h2 {
   }
 
   .header-about > p {
-    font-size: 20px;
+    font-size: 40px;
+    margin: 1rem;
   }  
 
   /* .header-profile-name {
@@ -162,7 +164,7 @@ h2 {
   }
 }
 
-@media (max-width: 900px) and (min-width: 801px) {
+@media (max-width: 1905px) and (min-width: 801px) {
 
   body:before {
     content: "";
@@ -183,20 +185,22 @@ h2 {
   }
   
   .header-profile > img {
-    width: 30%;
+    width: 250px;
     height: auto;
     float: left;
   }
 
   .header-about {
-    margin: 1rem;
+    margin: 2rem;
+    padding: 1rem;
     top: 500px;
-    border: 1px solid red;
+    background: white;
+    box-shadow: 0px 0px 5px 0px gray;
   }
 
   .header-about > p {
     font-size: 20px;
-  }  
+  }
 
   .header-profile-name {
     display: flex;
